--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "watch": "webpack --watch --mode=development",
-    "start": "serve dist"
+    "serve": "webpack serve"
   },
   "keywords": [],
   "author": "",
